@@ -1,6 +1,8 @@
 ikiwiki (2.50) UNRELEASED; urgency=low
 
   * img: Support captions.
+  * img: Don't generate empty title attributes, etc.
+  * img: Allow setting defaults for class and id too.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 07 Jun 2008 23:04:00 -0400
 
